<resources>
    <string name="app_name">Kookmin</string>
    <string name="action_settings">Settings</string>

    <string name="add">추가</string>
    <string name="title">제목</string>
    <string name="location">장소</string>
    <string name="time">시간</string>
    <string name="people">인원</string>
    <string name="registration">등록</string>
    <string name="selpeople">인원선택</string>
    <string name="information">정보</string>
    <string name="word">한마디</string>
</resources>
